--- a/1 Getting Started with Python/All class code - COLAB.ipynb
+++ b/1 Getting Started with Python/All class code - COLAB.ipynb
@@ -40,11 +40,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "qrNREWQy2Uw5",
-        "outputId": "23325f34-c0a7-4965-d05c-e8578aa26077",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "outputId": "23325f34-c0a7-4965-d05c-e8578aa26077"
       },
       "source": [
         "x = 5\n",
@@ -71,11 +71,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "CQsRCPJS36gs",
-        "outputId": "f77c2104-0307-4ce3-8dc6-3d02f52e9ed7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        }
+        },
+        "outputId": "f77c2104-0307-4ce3-8dc6-3d02f52e9ed7"
       },
       "source": [
         "n=5\n",
@@ -104,11 +104,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "XKo1JhKEGwkM",
-        "outputId": "b0bd008d-3f2b-41c4-f7f6-e819ff33610b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "b0bd008d-3f2b-41c4-f7f6-e819ff33610b"
       },
       "source": [
         "print(\"123\" + \"abc\")"
@@ -128,11 +128,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "08zUXq3QI8FL",
-        "outputId": "cb5e8dd2-cbe4-492d-aedb-a680b992d952",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "cb5e8dd2-cbe4-492d-aedb-a680b992d952"
       },
       "source": [
         "## O % MOSTRA O RESTO DE UMA DIVISÃO|  23/5> 4*5=20  ENTÃO A DIVISÃO DARIA 4 E SOBRARIA 3, QUE SERI O QUE O PROGRAMA IMPRIMIRIA\n",
@@ -159,11 +159,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "yGe-UxyFJKYA",
-        "outputId": "c27edcf2-7146-4520-87ec-60ea765c8201",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "c27edcf2-7146-4520-87ec-60ea765c8201"
       },
       "source": [
         "x = int(98.6)\n",
@@ -189,11 +189,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZGNc0OZlJT1o",
-        "outputId": "6f63f1f4-6d89-4659-96c1-5ee20121f1cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "6f63f1f4-6d89-4659-96c1-5ee20121f1cd"
       },
       "source": [
         "x = 1 + 2 * 3 - 8 / 4\n",
@@ -219,11 +219,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "UCSMPW8mgl9J",
-        "outputId": "03cf3669-5f5a-4ef4-ebef-133be607cde6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "outputId": "03cf3669-5f5a-4ef4-ebef-133be607cde6"
       },
       "source": [
         "# CONVERT ELEVATOR FLOORS \n",
@@ -256,11 +256,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "QL2bi9Uy_biy",
-        "outputId": "1442fffd-5265-4891-e381-f91677cbb7c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        }
+        },
+        "outputId": "1442fffd-5265-4891-e381-f91677cbb7c5"
       },
       "source": [
         "x=5\n",
@@ -298,11 +298,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "p_5JUj23C0-R",
-        "outputId": "2ba45c3d-1528-47a2-c903-fb5e70321866",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "outputId": "2ba45c3d-1528-47a2-c903-fb5e70321866"
       },
       "source": [
         "x=10\n",
@@ -330,11 +330,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "tWP2DS34DLmo",
-        "outputId": "870fbc67-00af-40e6-eaac-408cfdd02ab7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        }
+        },
+        "outputId": "870fbc67-00af-40e6-eaac-408cfdd02ab7"
       },
       "source": [
         "x= input (\"digite um número:\")\n",
@@ -364,11 +364,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "nOwUha1UF8VS",
-        "outputId": "74d48609-2464-4cef-ee8f-0333df270220",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "outputId": "74d48609-2464-4cef-ee8f-0333df270220"
       },
       "source": [
         "x = 0\n",
@@ -396,11 +396,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "nJA8DRGMGLdW",
-        "outputId": "7f1cf7bb-1956-45d5-b0ce-fd00a2bd5d85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "7f1cf7bb-1956-45d5-b0ce-fd00a2bd5d85"
       },
       "source": [
         "x=-2\n",
@@ -426,11 +426,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "zcF9oAu3eapF",
-        "outputId": "fbc6050f-f992-47eb-f62f-f30dc4e61712",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "outputId": "fbc6050f-f992-47eb-f62f-f30dc4e61712"
       },
       "source": [
         "## elif = else + if | if E else SERIA SÓ DUAS OPÇÕES (SIM OU NÃO). O ELIF É PARA TER  MAIS DE DUAS OPÇÃOS. VAI REPETINDO O COMANDO PARA OUTRAS CONDIÇÕES\n",
@@ -472,11 +472,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ykg2AcIhOrvs",
-        "outputId": "03f0650c-b86b-4b64-a449-b2f99a099f0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        }
+        },
+        "outputId": "03f0650c-b86b-4b64-a449-b2f99a099f0f"
       },
       "source": [
         "hrs = input(\"Enter Hours:\")\n",
@@ -510,11 +510,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "UT-f01ouHVWN",
-        "outputId": "a3d0539e-27f3-436a-d770-70268d0121ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "a3d0539e-27f3-436a-d770-70268d0121ec"
       },
       "source": [
         "## try/except  BLOCK =  TRACEBACK  \n",
@@ -562,11 +562,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "rTlVaLCvncCO",
-        "outputId": "2f71772a-e13b-47bc-cfb5-7aa6494a1b31",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        }
+        },
+        "outputId": "2f71772a-e13b-47bc-cfb5-7aa6494a1b31"
       },
       "source": [
         "## DEVERIA CHEGAR NO QUIT E SAIR DO PROGRAMA, MAS NO COLAB NÃO DA CERTO Q NEM NO PYTHON PELO CMD\n",
@@ -606,11 +606,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "qWepH7t-qsP2",
-        "outputId": "c4ae3436-02f1-4f49-da68-9e9b7cad8488",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "outputId": "c4ae3436-02f1-4f49-da68-9e9b7cad8488"
       },
       "source": [
         "number = input(\"Enter number between 0.0 and 1.0:\")\n",
@@ -658,11 +658,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "yH0vYt5KQ6BR",
-        "outputId": "fad40621-dded-4106-c154-1cacef74bd44",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        }
+        },
+        "outputId": "fad40621-dded-4106-c154-1cacef74bd44"
       },
       "source": [
         "def thing ():\n",
@@ -692,11 +692,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "-kkpZmJ8ciGQ",
-        "outputId": "7f1f246b-9baa-4a4a-d042-ce81cb697798",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        }
+        },
+        "outputId": "7f1f246b-9baa-4a4a-d042-ce81cb697798"
       },
       "source": [
         "def greet (lang):\n",
@@ -728,11 +728,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "clW9eDnGd1ZP",
-        "outputId": "99b5b97a-06c7-42c5-dbbb-4aa7eadc54c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "outputId": "99b5b97a-06c7-42c5-dbbb-4aa7eadc54c4"
       },
       "source": [
         "def greet ():\n",
@@ -757,11 +757,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZK5qtUDjePFK",
-        "outputId": "1220287c-710a-4a74-88eb-499615118856",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        }
+        },
+        "outputId": "1220287c-710a-4a74-88eb-499615118856"
       },
       "source": [
         "def greet (lang):\n",
@@ -793,11 +793,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "EnbS_ODXfp7F",
-        "outputId": "86b8becb-9e0f-49c9-cf1c-0a7c68081e70",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "86b8becb-9e0f-49c9-cf1c-0a7c68081e70"
       },
       "source": [
         "def addtwo (a, b):\n",
@@ -822,11 +822,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "9I2nm1sVqVZD",
-        "outputId": "90f775a2-61f8-451a-c572-b46e7715186a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        }
+        },
+        "outputId": "90f775a2-61f8-451a-c572-b46e7715186a"
       },
       "source": [
         "def computepay(h,tx):\n",
@@ -871,11 +871,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "J-ka-98Jyp-z",
-        "outputId": "1475265d-5bb6-4e6d-a789-5f6d49ec8ba7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        }
+        },
+        "outputId": "1475265d-5bb6-4e6d-a789-5f6d49ec8ba7"
       },
       "source": [
         "## ITERATION VARIABLE - VARIVEL Q MUDA A CADA LOOP\n",
@@ -906,11 +906,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "pu4aFvAn0Jst",
-        "outputId": "820a2453-f209-4f35-bc5d-31401b7dda41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
-        }
+        },
+        "outputId": "820a2453-f209-4f35-bc5d-31401b7dda41"
       },
       "source": [
         "while True:\n",
@@ -953,11 +953,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "KB5DmoHk08nj",
-        "outputId": "fd3f1ae5-8ea5-4ef1-9eaf-3305e9314b59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        }
+        },
+        "outputId": "fd3f1ae5-8ea5-4ef1-9eaf-3305e9314b59"
       },
       "source": [
         "## continue =   JUMPS TO THE \"TOP\" OF THE LOOP ANS STARTSS THE NEXT INTERACTION\n",
@@ -991,11 +991,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "YubuPWinYdL4",
-        "outputId": "ec78d1ba-2279-4b92-a149-d4a455918952",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        }
+        },
+        "outputId": "ec78d1ba-2279-4b92-a149-d4a455918952"
       },
       "source": [
         "for i in [5, 4, 3, 2, 1]:\n",
@@ -1023,16 +1023,24 @@
       "cell_type": "code",
       "metadata": {
         "id": "IATSKHpOZD1q",
-        "outputId": "279d85bc-7fe8-4505-c319-c7f23c85c60a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        }
+        },
+        "outputId": "01a4cb4d-fab5-4068-9e48-536a693f6ca6"
       },
       "source": [
-        "fri = ['du', 'sa', 'ba']\n",
-        "for fd in fri:\n",
-        "  print(' happy new year', fd)\n",
+        "# IN PYTHON TERMS, THE VARIABLE friends IS A LIST  OF THREE STRINGS AND THE FOR LOOP\n",
+        "# GOES THROUGH THE LIST AND EXECUTES THE BODY ONCE FOR EACH OF THE THREE STRINGS IN THE LIST RESULTING THE OUTPUT\n",
+        "\n",
+        "# IN PARTICULAR, friend IS THE ITERATION VARIABLE FOR THE FOR LOOP. \n",
+        "# THE VARIABLE friend CHANGES FOR EACH ITERATION OF THE LOOP AND CONTROLS WHEN THE FOR LOOP COMPLETES.\n",
+        "# THE ITERATION VARIABLE STEPS SUCCESSIVELY THROUGH THE THREE STRINGS STORED IN THE friends VARIABLE.\n",
+        "\n",
+        "\n",
+        "friends = ['du', 'sa', 'ba']\n",
+        "for frined in friends:\n",
+        "  print(' happy new year', frined)\n",
         "\n"
       ],
       "execution_count": null,
@@ -1052,11 +1060,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "LQtgDUbK1GaI",
-        "outputId": "dec65eb9-ffe1-4491-a8b9-1a72b5663fd2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "dec65eb9-ffe1-4491-a8b9-1a72b5663fd2"
       },
       "source": [
         "## i AQUI SERVE TBM COMO UM FATOR DE SOMA, OU SEJA, CD VALOR DO FOR SERÁ SOMADO\n",
@@ -1081,11 +1089,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "4B2utn2XzCub",
-        "outputId": "2a528352-fea9-43a7-db77-215d5faf772e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
-        }
+        },
+        "outputId": "2a528352-fea9-43a7-db77-215d5faf772e"
       },
       "source": [
         "largest_so_far = -1\n",
@@ -1116,14 +1124,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EEFicO9fJCos"
+      },
+      "source": [
+        "IS AND NOT IS  |  NONE\n",
+        "\n",
+        "the is and is not operator, they're both operators. Is and is not are like less than or less than or equal to or not equal to. They don't hurt their operands and they return you a true or a false. \n",
+        "\n",
+        "None:  is just a value that commonly is used to signify 'empty', or 'no value here'."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "TDT4VxuYF-Zr",
-        "outputId": "14d068b3-ce05-4b66-b178-98d51d106611",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
-        }
+        },
+        "outputId": "14d068b3-ce05-4b66-b178-98d51d106611"
       },
       "source": [
         "smallest_so_far = None\n",
@@ -1156,27 +1177,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "EEFicO9fJCos"
-      },
-      "source": [
-        "IS AND NOT IS  |  NONE\n",
-        "\n",
-        "the is and is not operator, they're both operators. Is and is not are like less than or less than or equal to or not equal to. They don't hurt their operands and they return you a true or a false. \n",
-        "\n",
-        "None:  is just a value that commonly is used to signify 'empty', or 'no value here'."
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "hT2IvIUb0Y3w",
-        "outputId": "464c6d7e-62d2-4a18-898e-46206e7bd697",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c629a901-620a-4553-942c-a0e33ba0f761"
       },
       "source": [
         "## i É A VARIAVEL DE INTERAÇÃO, MAS AQUI ELA SÓ SERVE COMO UM CONTADOR, OU SEJA, OS NUMEROS DO FOR NÃO SERVIRÃO PRA NADA ALÉM DE CONTAR ETAPAS DO LOOP \n",
@@ -1186,7 +1193,7 @@
         "    x = x + 1\n",
         "print(x)\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -1201,11 +1208,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Cfgx9BRcMtwr",
-        "outputId": "8e4d5b1b-afc0-484b-a89c-4d75ba90ae78",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        }
+        },
+        "outputId": "8e4d5b1b-afc0-484b-a89c-4d75ba90ae78"
       },
       "source": [
         "num = 0\n",
@@ -1242,14 +1249,14 @@
       "cell_type": "code",
       "metadata": {
         "id": "wfYx6Lw4Oi64",
-        "outputId": "4a49dab6-5ad6-4750-b47e-3f4f21bf8281",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        }
+        },
+        "outputId": "4a49dab6-5ad6-4750-b47e-3f4f21bf8281"
       },
       "source": [
-        "num = 0\n",
+        "num = 0 \n",
         "tot = 0.0\n",
         "\n",
         "while True :\n",
@@ -1303,14 +1310,14 @@
       "cell_type": "code",
       "metadata": {
         "id": "0RksKcA9RAW6",
-        "outputId": "3f36b5c0-aa02-413e-fa3a-e830b6a1c162",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        }
+        },
+        "outputId": "3f36b5c0-aa02-413e-fa3a-e830b6a1c162"
       },
       "source": [
-        "largest = None\n",
+        "largest = None # nos outros caso usou 0, mas aqui posso colocar none tbm \n",
         "smallest = None\n",
         "\n",
         "while True :\n",
@@ -1355,17 +1362,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "aN_6tNsgkE0w"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
